[project]
name = "Portfolio-API"
version = "0.1.0"
description = "Sample API for Portfolio. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "sqlmodel>=0.0.24",
    # Development dependencies
    "black>=25.1.0",
    "mypy>=1.17.0",
    "flake8-pyproject>=1.2.3",
    "flake8-isort>=6.1.2",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]

[tool.pylint]
ignore = [".venv"]

[tool.flake8]
exclude = [".venv"]
max-line-length = 88

[tool.black]
line-length = 88

